--- a/app/src/main/res/layout/home_flash_sale_item.xml
+++ b/app/src/main/res/layout/home_flash_sale_item.xml
@@ -104,8 +104,9 @@
         android:gravity="start|center"
         android:textColor="#FFFFFFFF"
         android:textSize="10sp"
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/category"
-        app:layout_constraintTop_toBottomOf="@+id/name"
         tools:ignore="SmallSp"
         tools:text="$ 180,000" />
 </androidx.constraintlayout.widget.ConstraintLayout>
