--- a/app/src/main/res/layout/home_latest_item.xml
+++ b/app/src/main/res/layout/home_latest_item.xml
@@ -62,13 +62,14 @@
         android:id="@+id/price"
         android:layout_width="65dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
         android:ellipsize="end"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="start|center"
         android:textColor="#FFFFFFFF"
         android:textSize="7sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/category"
-        app:layout_constraintTop_toBottomOf="@+id/name"
         tools:ignore="SmallSp"
         tools:text="$ 180,000" />
 </androidx.constraintlayout.widget.ConstraintLayout>
