--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -258,6 +258,7 @@
             android:layout_marginStart="11dp"
             android:layout_marginTop="14dp"
             android:orientation="horizontal"
+            android:paddingBottom="70dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@+id/viewAllBrandsButton"
             tools:listitem="@layout/home_latest_item" />
