--- a/app/src/main/res/layout/fragment_good_details.xml
+++ b/app/src/main/res/layout/fragment_good_details.xml
@@ -10,14 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
@@ -29,20 +21,74 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/posterViewPager"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/posterViewPagerCardView"
+            android:layout_width="280dp"
+            android:layout_height="279dp"
+            app:cardCornerRadius="9dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/posterViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="42dp"
+            android:layout_height="95dp"
+            android:layout_marginBottom="28dp"
+            app:cardCornerRadius="14dp"
+            app:layout_constraintBottom_toBottomOf="@+id/posterViewPagerCardView"
+            app:layout_constraintEnd_toEndOf="@+id/posterViewPagerCardView"
+            app:layout_constraintStart_toEndOf="@+id/posterViewPagerCardView">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFE5E9EF"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:src="@drawable/good_details_like_shared_divider" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:layout_marginTop="17dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/good_details_like_icon" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="17dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/good_details_shared_icon" />
+        </androidx.cardview.widget.CardView>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/postersTabLayout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
+            android:layout_marginTop="31dp"
+            android:background="@android:color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/posterViewPager" />
+            app:layout_constraintTop_toBottomOf="@id/posterViewPagerCardView"
+            app:tabGravity="center"
+            app:tabIndicatorHeight="0dp"
+            app:tabMode="scrollable" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/goodName"
@@ -145,6 +191,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:paddingBottom="25dp"
             android:scaleType="fitXY"
             android:src="@drawable/good_details_add_to_cart_menu_background"
             app:layout_constraintTop_toBottomOf="@+id/listColors" />
