--- a/app/src/main/res/layout/good_details_poster_mediator_default.xml
+++ b/app/src/main/res/layout/good_details_poster_mediator_default.xml
@@ -1,8 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/picture"
-    android:layout_width="66dp"
-    android:layout_height="38dp"
-    android:background="@drawable/good_details_poster_item_background">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-</androidx.appcompat.widget.AppCompatImageView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pictureSelectedCard"
+        android:layout_width="83dp"
+        android:layout_height="45dp"
+        android:layout_gravity="center"
+        android:layout_margin="4dp"
+        app:cardCornerRadius="9dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/pictureSelected"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:elevation="7dp"
+            android:scaleType="fitXY"
+            tools:src="@drawable/home_photo_place_holder" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/pictureDefaultCard"
+        android:layout_width="68dp"
+        android:layout_height="39dp"
+        android:layout_gravity="center"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="0dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/pictureDefault"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:scaleType="fitXY"
+            tools:src="@drawable/profile_photo_place_holder" />
+    </androidx.cardview.widget.CardView>
+</FrameLayout>
